src/tests/resources/transcripts/errors/runtime/system_module_errors.sif
try the contents of file 123
print error (the error)
(-- error
expected a string
--)

try the contents of directory 456
print error (the error)
(-- error
expected a string
--)
